--- a/kubernetes/istio-resources/virtual_service.yaml
+++ b/kubernetes/istio-resources/virtual_service.yaml
@@ -13,4 +13,4 @@ spec:
             prefix: /
       route:
         - destination:
-            host: reviews.prod.svc.cluster.local
+            host: example-server-app.apps.svc.cluster.local
